--- a/ReactJS/package.json
+++ b/ReactJS/package.json
@@ -6,7 +6,8 @@
     "@okta/okta-react": "^1.3.1",
     "bootstrap": "^4.4.1",
     "highlight.js": "^9.18.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
+    "map-cache": "^0.2.2",
     "mdbootstrap": "^4.11.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
@@ -15,9 +16,8 @@
     "react-bootstrap-table2-toolkit": "^2.1.1",
     "react-dom": "^16.12.0",
     "react-force-graph": "^1.30.0",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.1",
     "reactstrap": "^8.3.2",
-    "simple-sidebar": "^2.8.3",
     "simpler-sidebar": "^2.2.5",
     "sql-formatter": "^2.3.3",
     "three-spritetext": "^1.2.2",
